syntax = "proto3";

package ethereum;

message IBlock {
  uint64 number = 1;
  string hash = 2;
  uint32 created_at = 3;
  string miner = 4;
  uint64 gasUsed = 5;
  uint64 gasLimit = 6;
  string data = 7;
  repeated string txns = 8;
};